Fix presentation on mobile

--- a/src/assets/presentation.css
+++ b/src/assets/presentation.css
@@ -256,10 +256,7 @@
     position: relative;
     width: 100%;
     margin-left: 0;
-    height: 100vh;
-    min-height: 100vh;
-    min-height: fill-available;
-    min-height: -webkit-fill-available;
+    height: 100vh; 
   }
   #short-description{
     padding: 15px;
